Карты готовы (вверх, вниз, увеличение, уменьшение). FIX исправлена потеря карты при переносе над картой с большим z-index FIX карты не залазят на поле колоды FIX меню снова всплывает

--- a/img/icon-fonts/menu/styles.css
+++ b/img/icon-fonts/menu/styles.css
@@ -92,3 +92,9 @@
 .icon-arrow-right:before {
   content: "\72";
 }
+.icon-search-minus:before {
+  content: "\75";
+}
+.icon-search-plus:before {
+  content: "\76";
+}
